--- a/view/inc/menu.front.html.twig
+++ b/view/inc/menu.front.html.twig
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="./">
+                    <a class="nav-link active" href="http://global-2025/blog-php-oo-mvc/public/">
                         <i class="bi bi-house-door me-1"></i>Accueil
                     </a>
                 </li>
@@ -26,7 +26,7 @@
                 #}
                 {% for item in categories %}
                     <li class="nav-item">
-                        <a class="nav-link" href="./category/{{ item.getCategorySlug() }}">
+                        <a class="nav-link" href="http://global-2025/blog-php-oo-mvc/public/category/{{ item.getCategorySlug() }}">
                             {{ item.getCategoryTitle() }}
                         </a>
                     </li>
@@ -37,7 +37,7 @@
     endforeach;
     ?>#}
                 <li class="nav-item">
-                    <a class="nav-link" href="./connection/">
+                    <a class="nav-link" href="http://global-2025/blog-php-oo-mvc/public/connection/">
                         <i class="bi bi-gear me-1"></i>Connexion
                     </a>
                 </li>
