--- a/view/homepage.html.twig
+++ b/view/homepage.html.twig
@@ -47,7 +47,7 @@
             </div>
             <div class="card-body">
                 <h4 class="card-title text-primary fw-bold mb-3">
-                    {{ article.getArticleTitle|e }}</h4>
+                    {{ article.getArticleTitle|raw }}</h4>
                 <p class="card-text text-muted">
                     {{ article.getArticleText|e }}<span class="text-primary"> <a href="./article/{{ article.getArticleSlug }}">Lire la suite</a></span>
                 </p>
