--- a/view/inc/menu.front.html.twig
+++ b/view/inc/menu.front.html.twig
@@ -1,7 +1,7 @@
 <!-- Navigation moderne pour articles -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
     <div class="container">
-        <a class="navbar-brand fw-bold" href="./">
+        <a class="navbar-brand fw-bold" href="{{ racineURL }}">
             <i class="bi bi-newspaper me-2"></i>Mon Blog
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="http://global-2025/blog-php-oo-mvc/public/">
+                    <a class="nav-link active" href="{{ racineURL }}">
                         <i class="bi bi-house-door me-1"></i>Accueil
                     </a>
                 </li>
@@ -26,7 +26,7 @@
                 #}
                 {% for item in categories %}
                     <li class="nav-item">
-                        <a class="nav-link" href="http://global-2025/blog-php-oo-mvc/public/category/{{ item.getCategorySlug() }}">
+                        <a class="nav-link" href="{{ racineURL }}category/{{ item.getCategorySlug() }}">
                             {{ item.getCategoryTitle() }}
                         </a>
                     </li>
@@ -37,7 +37,7 @@
     endforeach;
     ?>#}
                 <li class="nav-item">
-                    <a class="nav-link" href="http://global-2025/blog-php-oo-mvc/public/connection/">
+                    <a class="nav-link" href="{{ racineURL }}connection/">
                         <i class="bi bi-gear me-1"></i>Connexion
                     </a>
                 </li>
