--- a/view/connection.html.twig
+++ b/view/connection.html.twig
@@ -40,7 +40,7 @@
                             <!-- Contenu de l'article -->
                             <div class="mb-4">
                                 <label for="user_pwd" class="form-label fw-semibold">
-                                    <i class="bi bi-textarea-t me-1 text-primary"></i>Votre mot de passe
+                                    <i class="bi bi-textarea-t me-1 text-primary"></i>Votre mot de passe (le même que le login pour cet exercice !)
                                 </label>
                                 <input type="password"
                                        class="form-control form-control-lg"
@@ -55,8 +55,6 @@
                                     <i class="bi bi-markdown me-1"></i>
                                 </div>
                             </div>
-
-
 
                             <!-- Boutons d'action -->
                             <div class="d-flex gap-3 pt-3 border-top">
