--- a/view/connection.html.twig
+++ b/view/connection.html.twig
@@ -62,7 +62,7 @@
                                 <button type="submit" class="btn btn-primary btn-lg flex-fill">
                                     <i class="bi bi-check-circle me-2"></i>Se connecter
                                 </button>
-                                <a href="./" class="btn btn-outline-secondary btn-lg">
+                                <a href="{{ racineURL }}" class="btn btn-outline-secondary btn-lg">
                                     <i class="bi bi-arrow-left me-2"></i>Retour
                                 </a>
                             </div>
@@ -70,31 +70,6 @@
                     </div>
                 </div>
 
-                <!-- Aperçu des informations -->
-                <div class="row mt-4">
-                    <div class="col-md-6">
-                        <div class="card border-0 bg-light">
-                            <div class="card-body text-center">
-                                <i class="bi bi-lightbulb text-warning fs-1 mb-2"></i>
-                                <h6 class="text-muted">Conseil</h6>
-                                <small class="text-muted">
-                                    Un bon titre est accrocheur et descriptif
-                                </small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card border-0 bg-light">
-                            <div class="card-body text-center">
-                                <i class="bi bi-clock text-info fs-1 mb-2"></i>
-                                <h6 class="text-muted">Sauvegarde</h6>
-                                <small class="text-muted">
-                                    La date sera automatiquement définie
-                                </small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
