alert alert-danger

--- a/view/connection.html.twig
+++ b/view/connection.html.twig
@@ -55,7 +55,7 @@
 
                             </div>
                             {% if error %}
-                                <div class="alert-danger">{{ error }}</div>
+                                <div class="alert alert-danger">{{ error }}</div>
                             {% endif %}
                             <!-- Boutons d'action -->
                             <div class="d-flex gap-3 pt-3 border-top">
