--- a/view/article.html.twig
+++ b/view/article.html.twig
@@ -1,56 +1,54 @@
 {% extends "template.front.html.twig" %}
 
-{% block title %}{{ parent()}} | Article : {{ article.getArticleTitle}} {% endblock %}
-{% block hero_title %}Article : <small>{{ article.getArticleTitle}}</small>{% endblock %}
-{% block hero_text %}Publié par <a class="text-white" href="{{ racineURL }}user/{{ article.getUser.getUserLogin }}">
-    {% if article.getUser.getUserRealName %} {{ article.getUser.getUserRealName }}
-    {% else %} {{ article.getUser.getUserLogin }}
-    {% endif %}</a> | Le {{ article.getArticleDatePublish()|date('Y-m-d H:i') }}
-{% endblock %}
-
+{% block title %}{{ parent() }} | Article : {{ article.getArticleTitle }} {% endblock %}
+{% block hero_title %}Article : <small>{{ article.getArticleTitle }}</small>{% endblock %}
+{% block hero_text %}{% endblock %}
 {% block aside %}
-<div>
-    <div class="row justify-content-center">
-        <div class="col-md-12 text-left">
-            <div class="card border-0 shadow-sm">
-                <div class="card-body py-5">
-                    <h3 class="text-muted mb-3">{{ article.getArticleTitle}}</h3>
-                    <div class="d-flex align-items-center justify-content-between">
-                        <div>
+    <div>
+        <div class="row justify-content-center">
+            <div class="col-md-12 text-left">
+                <div class="card border-0 shadow-sm">
+                    <div class="card-body py-5">
+                        <h3 class="text-muted mb-3">{{ article.getArticleTitle }}</h3>
+                        <div class="d-flex align-items-center justify-content-between">
+                            <div>
 
-                            {% for category in article.getCategories() %}
-
-                                <span class="badge bg-primary  "><a class="text-white" href="{{ racineURL }}category/{{ category.getCategorySlug()|e }}">
+                                {% for category in article.getCategories() %}
+                                    {% if loop.first %} Rubrique : {% endif %}
+                                    <span class="badge bg-primary  "><a class="text-white"
+                                                                        href="{{ racineURL }}category/{{ category.getCategorySlug()|e }}">
                                 {{ category.getCategoryTitle()|e }}</a></span>
-                            {% endfor %}
+                                {% endfor %}
+                            </div>
+                            <small class="text-muted">
+                                <i class="bi bi-calendar me-1"></i>{{ article.getArticleDatePublish()|date('Y-m-d H:i') }}
+                            </small>
                         </div>
-                        <small class="text-muted">
-                            <i class="bi bi-calendar me-1"></i>{{ article.getArticleDatePublish()|date('Y-m-d H:i') }}</small>
                     </div>
-                </div>
-                <div class="card-body">
-                    <h4 class="card-title text-primary fw-bold mb-3">
-                        {{ article.getArticleTitle|raw }}</h4>
-                    <p class="card-text text-muted">
-                        {{ article.getArticleText|nl2br }}
-                    </p>
-                </div>
-                <div class="card-footer bg-white border-0">
-                    <div class="d-flex justify-content-between align-items-center">
+                    <div class="card-body">
+                        <h4 class="card-title text-primary fw-bold mb-3">
+                            {{ article.getArticleTitle|raw }}</h4>
+                        <p class="card-text text-muted">
+                            {{ article.getArticleText|nl2br }}
+                        </p>
+                    </div>
+                    <div class="card-footer bg-white border-0">
+                        <div class="d-flex justify-content-between align-items-center">
                             <span class="badge bg-light text-primary">
                                 <i class="bi bi-eye me-1"></i>
-                                Publié par <a  class="text-primary" href="{{ racineURL }}user/{{ article.getUser.getUserLogin }}">
+                                Publié par <a class="text-primary"
+                                              href="{{ racineURL }}user/{{ article.getUser.getUserLogin }}">
                                 {% if article.getUser.getUserRealName %} {{ article.getUser.getUserRealName }}
                                 {% else %} {{ article.getUser.getUserLogin }}
                                 {% endif %}</a></span>
-                        <small class="text-muted">
-                            <i class="bi bi-clock me-1"></i>Nombre de commentaires :
-                            {{ article.getComments.comment_count }}
-                        </small>
+                            <small class="text-muted">
+                                <i class="bi bi-clock me-1"></i>Nombre de commentaires :
+                                {{ article.getComments.comment_count }}
+                            </small>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-                </div>
-            </div>
-    {% endblock %}
+    </div>
+{% endblock %}
