--- a/view/inc/menu.front.html.twig
+++ b/view/inc/menu.front.html.twig
@@ -36,11 +36,20 @@
                 <?php
     endforeach;
     ?>#}
+                {# Si on est connecté #}
+                {% if session.user_id %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ racineURL }}disconnection/">
+                        <i class="bi bi-gear me-1"></i>Déconnexion
+                    </a>
+                </li>
+                {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="{{ racineURL }}connection/">
                         <i class="bi bi-gear me-1"></i>Connexion
                     </a>
                 </li>
+                {% endif %}
             </ul>
         </div>
     </div>
