--- a/view/category.html.twig
+++ b/view/category.html.twig
@@ -1,6 +1,8 @@
 {% extends "template.front.html.twig" %}
 
-{% block title %}{{ parent() }} | Homepage {% endblock %}
+{% block title %}{{ parent() }} | Catégorie : {{ category.getCategoryTitle }} {% endblock %}
+{% block hero_title %}Catégorie : <small>{{ category.getCategoryTitle }}</small>{% endblock %}
+{% block hero_text %}{{ category.getCategoryDescription }}{% endblock %}
 {% block main %}
     {# on compte le nombre d'article #}
     {% set nbArticles = articles|length %}
