--- a/view/inc/menu.front.html.twig
+++ b/view/inc/menu.front.html.twig
@@ -41,6 +41,14 @@
                             <i class="bi bi-gear me-1"></i>Déconnexion
                         </a>
                     </li>
+                    {# si le role_name est administrateur #}
+                    {% if session.role_name == 'Admin' %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ racineURL }}admin/">
+                                <i class="bi bi-speedometer2 me-1"></i>Admin
+                            </a>
+                        </li>
+                    {% endif %}
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ racineURL }}connection/">
