--- a/view/connection.html.twig
+++ b/view/connection.html.twig
@@ -18,6 +18,9 @@
                     </div>
                     <div class="card-body p-4">
                         <form action="" method="post" class="needs-validation" novalidate>
+                            {% if redirect is defined and redirect is not null %}
+                                <input type="hidden" name="redirect" value="{{ redirect }}">
+                            {% endif %}
                             <!-- Titre de l'article -->
                             <div class="mb-4">
                                 <label for="user_login" class="form-label fw-semibold">
