--- a/view/inc/menu.back.html.twig
+++ b/view/inc/menu.back.html.twig
@@ -1,5 +1,5 @@
 <!-- Navigation moderne pour back -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+<nav class="navbar navbar-expand-lg navbar-dark  bg-success shadow-sm">
     <div class="container">
         <a class="navbar-brand fw-bold" href="{{ racineURL }}">
             <i class="bi bi-newspaper me-2"></i>Mon Blog
