--- a/view/backend/homepage.back.html.twig
+++ b/view/backend/homepage.back.html.twig
@@ -5,7 +5,7 @@
 {% block main %}
     <div class="row">
         <div class="col-md-4 mb-4">
-            <div class="card text-white bg-primary h-100">
+            <div class="card text-white bg-success h-100">
                 <div class="card-body d-flex flex-column justify-content-center align-items-center">
                     <i class="bi bi-journal-text display-4 mb-3"></i>
                     <h5 class="card-title">Articles</h5>
