--- a/view/template.back.html.twig
+++ b/view/template.back.html.twig
@@ -7,12 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
           rel="stylesheet">{% endblock %}
+
 {% block body %}
     {% block nav %}{% include 'inc/menu.back.html.twig' %}{% endblock %}
     {% block content %}
         {% block hero %}
             <!-- Hero Section -->
-            <div class="bg-primary text-white py-5 mb-5">
+            <div class=" bg-success text-white py-5 mb-5">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-8">
