--- a/view/inc/menu.front.html.twig
+++ b/view/inc/menu.front.html.twig
@@ -36,19 +36,22 @@
                 {% endfor %}
                 {# Si on est connecté #}
                 {% if session.user_id %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ racineURL }}disconnection/">
-                            <i class="bi bi-gear me-1"></i>Déconnexion
-                        </a>
-                    </li>
                     {# si le role_name est administrateur #}
                     {% if session.role_name == 'Admin' %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ racineURL }}admin/">
-                                <i class="bi bi-speedometer2 me-1"></i>Admin
+                               | <i class="bi bi-speedometer2 me-1"></i>Administration
                             </a>
                         </li>
                     {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">- {% if session.user_real_name %}{{ session.user_real_name }}{% else %}{{ session.user_login }}{% endif %}
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ racineURL }}disconnection/">
+                            <i class="bi bi-gear me-1"></i>Déconnexion</a>
+                    </li>
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ racineURL }}connection/">
