--- a/view/backend/homepage.back.html.twig
+++ b/view/backend/homepage.back.html.twig
@@ -13,5 +13,32 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-4 mb-4">
+            <div class="card text-white bg-info h-100">
+                <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                    <i class="bi bi-tags display-4 mb-3"></i>
+                    <h5 class="card-title">Catégories</h5>
+                    <p class="card-text fs-4">{{ categoryCount }}</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card text-white bg-warning h-100">
+                <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                    <i class="bi bi-chat-dots display-4 mb-3"></i>
+                    <h5 class="card-title">Commentaires</h5>
+                    <p class="card-text fs-4">{{ commentCount }}</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card text-white bg-danger h-100">
+                <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                    <i class="bi bi-people display-4 mb-3"></i>
+                    <h5 class="card-title">Utilisateurs</h5>
+                    <p class="card-text fs-4">{{ userCount }}</p>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
