--- a/view/inc/menu.back.html.twig
+++ b/view/inc/menu.back.html.twig
@@ -20,7 +20,8 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">- {% if session.user_real_name %}{{ session.user_real_name }}{% else %}{{ session.user_login }}{% endif %}
+                    <a class="nav-link" href="{{ racineURL }}user/{{ session.user_login }}">
+                        <i class="bi bi-person me-1"></i>{% if session.user_real_name %}{{ session.user_real_name }}{% else %}{{ session.user_login }}{% endif %}
                     </a>
                 </li>
                 <li class="nav-item">
