--- a/view/inc/menu.back.html.twig
+++ b/view/inc/menu.back.html.twig
@@ -20,22 +20,22 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ racineURL }}admin/articles">
+                    <a class="nav-link" href="{{ racineURL }}admin/article">
                         <i class="bi bi-tags me-1"></i>Articles
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ racineURL }}admin/categories">
+                    <a class="nav-link" href="{{ racineURL }}admin/categorie">
                         <i class="bi bi-tags me-1"></i>Catégories
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ racineURL }}admin/commentaires">
+                    <a class="nav-link" href="{{ racineURL }}admin/commentaire">
                         <i class="bi bi-tags me-1"></i>Commentaires
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ racineURL }}admin/users">
+                    <a class="nav-link" href="{{ racineURL }}admin/user">
                         <i class="bi bi-tags me-1"></i>Utilisateurs
                     </a>
                 </li>
