--- a/view/backend/list.article.html.twig
+++ b/view/backend/list.article.html.twig
@@ -134,7 +134,7 @@
                             </td>
                             <td class="text-center">
                                 <div class="btn-group btn-group-sm" role="group">
-                                    <a href="?p=update&id=4"
+                                    <a href="{{ racineURL }}admin/article/update/{{ article.getArticleId }}"
                                        class="btn btn-outline-primary"
                                        title="Modifier">
                                         <i class="bi bi-pencil"></i>
